--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             <h2>Coba KodingBot di Perangkat Kamu!</h2>
             <p>Download versi terbaru aplikasi KodingBot untuk Android.</p>
             <div class="cta-buttons">
-              <a href="" class="btn-primary">Android</a>
+              <a href="https://github.com/kodingbotapp/kodingbotapp.github.io/releases/download/1.0/KodingBot.apk" class="btn-primary">Android</a>
             </div>
           </div>
           <div class="cta-image" data-aos="fade-left" data-aos-delay="300">
