--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                       <img src="assets/img/person/person1.png" class="img-fluid" alt="" loading="lazy">
                     </div>
                     <div class="member-info">
-                      <h3>Qismiyya Nayra Awikayna</h3>
+                      <h3>Janeeta Abiyyah Astaghina</h3>
                       <span>Researcher</span>
                       <div class="member-social">
                         <a href="#"><i class="bi bi-instagram"></i></a>
